--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Kumbh+Sans:400");
 
 $black: #101c2c;
+$green: #002329;
 $textShadow: 1px 1px 2px $black;
 $font: "Kumbh Sans", sans-serif;
 $fontSize: 100%;
@@ -40,13 +41,12 @@ li {
 
 body {
 	margin: 0 auto;
-	// padding: 0 1.25rem;
 	width: 100vw;
 	height: 100vh;
 	font-family: $font;
 	font-weight: 400;
 	line-height: 1.75;
-	background: $black;
+	background: $green;
 	color: #fff;
 	font-size: 112.8%;
 }
@@ -74,11 +74,50 @@ section {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	background: $black;
 }
 /* ========= Header Specifics============ */
 .head {
 	background: top / cover fixed;
+}
+
+// grid of our ugly mugs ====================================
+.brady-bunch {
+	display: grid;
+	grid-template-columns: 50% 50%;
+}
+.brady-bunch-frame {
+	height: 17rem;
+	width: auto;
+	position: relative;
+	align-content: center;
+}
+.image {
+	opacity: 1;
+	display: block;
+	width: auto;
+	height: 100%;
+	padding: 2rem;
+	transition: 0.5s ease;
+	backface-visibility: hidden;
+}
+
+.info-window {
+	opacity: 0;
+	transition: 0.5s ease;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	text-align: center;
+}
+
+//
+.brady-bunch-frame:hover .image {
+	opacity: 0.3;
+}
+.brady-bunch-frame:hover .info-window {
+	opacity: 1;
 }
 // Media Queries
 @media only screen and (max-width: 650px) {
@@ -86,136 +125,20 @@ section {
 		background: top / cover fixed;
 	}
 }
-
 @media only screen and (max-width: 1024px) {
 	section {
 		flex-direction: column;
-	}
-	.carousel__viewport {
-		width: 100vw;
-		.carousel__slide {
-			h4 {
-				font-size: 0.8rem;
-			}
-			p {
-				font-size: 70%;
-			}
-		}
-	}
-}
-
-// Carousel
-@keyframes tonext {
-	75% {
-		left: 0;
-	}
-	95% {
-		left: 100%;
-	}
-	98% {
-		left: 100%;
-	}
-	99% {
-		left: 0;
-	}
-}
-
-@keyframes tostart {
-	75% {
-		left: 0;
-	}
-	95% {
-		left: -300%;
-	}
-	98% {
-		left: -300%;
-	}
-	99% {
-		left: 0;
-	}
-}
-
-@keyframes snap {
-	96% {
-		scroll-snap-align: center;
-	}
-	97% {
 		scroll-snap-align: none;
 	}
-	99% {
-		scroll-snap-align: none;
+	.wrapper {
+		scroll-snap-type: none;
 	}
-	100% {
-		scroll-snap-align: center;
+	.brady-bunch {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
 	}
-}
-
-.carousel__viewport {
-	display: flex;
-	overflow-x: scroll;
-	counter-reset: item;
-	scroll-behavior: smooth;
-	scroll-snap-type: x mandatory;
-}
-
-.carousel__slide {
-	position: relative;
-	flex: 0 0 100%;
-	height: 20rem;
-	width: 4.5rem;
-	counter-increment: item;
-	padding: 2em 3em 0 3em;
-	margin: 1em;
-	text-shadow: $textShadow;
-	background: top / cover no-repeat
-	h4 {
-		font-size: $h4;
-		margin: 0;
+	.image {
+		padding-top: 0.1rem;
 	}
-	p {
-		font-size: $sliderFontSize;
-		margin: 0;
-	}
-}
-
-.carousel__slide:before {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate3d(-50%, -40%, 70px);
-	color: #fff;
-	font-size: 2em;
-}
-
-.carousel__snapper {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	scroll-snap-align: center;
-}
-
-@media (hover: hover) {
-	.carousel__snapper {
-		animation-name: tonext, snap;
-		animation-timing-function: ease;
-		animation-duration: 4s;
-		animation-iteration-count: infinite;
-	}
-
-	.carousel__slide:last-child .carousel__snapper {
-		animation-name: tostart, snap;
-	}
-}
-
-@media (prefers-reduced-motion: reduce) {
-	.carousel__snapper {
-		animation-name: none;
-	}
-}
-
-.carousel:hover .carousel__snapper,
-.carousel:focus-within .carousel__snapper {
-	animation-name: none;
 }
