--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -136,6 +136,26 @@ i {
 	width: 10rem;
 }
 
+.backdrop {
+	position: fixed;
+	background-color: rgba(0, 0, 0, 0.5);
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+.modal {
+	color: #fff;
+	background-color: $black;
+	position: absolute;
+	top: 10%;
+	right: 10%;
+	bottom: 10%;
+	left: 10%;
+	padding: 1em;
+	border-radius: 10px;
+}
+
 // Media Queries
 @media only screen and (max-width: 768px) {
 	section {
