--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -79,7 +79,7 @@ section {
 a {
 	text-decoration: none;
 	color: #fff;
-	border-bottom: 0.5px solid white;
+	// border-bottom: 0.5px solid white;
 }
 
 iframe {
