border bottom only for see details

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -126,6 +126,9 @@ iframe {
 .listen-links {
 	display: grid;
 	grid-template-columns: 50% 50%;
+	a {
+		border-bottom: 0.5px solid white;
+	}
 }
 .listen-link {
 	padding: 2rem;
